Fixed spinner buttons on firefox

--- a/style.css
+++ b/style.css
@@ -119,10 +119,14 @@ input {
     text-align: right;
 }
 
-input::-webkit-outer-spin-button,
+input[type='number'] {
+    appearance: textfield;
+}
+
+/* input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     display: none;
-}
+} */
 
 input::placeholder {
     color: var(--grayish-cyan);
